debug nodeJS server stream

--- a/nodeJS/nodeJS.ipynb
+++ b/nodeJS/nodeJS.ipynb
@@ -28,6 +28,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# intial project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! npm init -y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Create package.json"
    ]
   },
@@ -132,9 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting server.js\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile server.js\n",
     "var PROTO_PATH = \"../protos/chatbot.proto\";\n",
@@ -161,8 +185,11 @@
     "  call.on(\"data\", function (st) {\n",
     "    console.log(\"data:\", st.name);\n",
     "    for (let x = 0; x < 5; x++) {\n",
-    "      st.result = x;\n",
-    "      call.write(st);\n",
+    "      const dataToSend = {\n",
+    "        name: \"blue\",\n",
+    "        result: x,\n",
+    "      };\n",
+    "      call.write(dataToSend);\n",
     "    }\n",
     "    call.end();\n",
     "  });\n",
@@ -195,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing streamClient.js\n"
+      "Overwriting streamClient.js\n"
      ]
     }
    ],
@@ -324,9 +351,9 @@
       "begin\n",
       "end\n",
       "Service stream : 0\n",
-      "Service stream : 4\n",
-      "Service stream : 4\n",
-      "Service stream : 4\n",
+      "Service stream : 1\n",
+      "Service stream : 2\n",
+      "Service stream : 3\n",
       "Service stream : 4\n",
       "end:\n"
      ]
