new Gen photo file

--- a/csharp/C#/Greeter.ipynb
+++ b/csharp/C#/Greeter.ipynb
@@ -34,7 +34,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%apt install protobuf-compiler\n"
+    "# %apt install protobuf-compiler\n",
+    "! brew install protobuf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "libprotoc 27.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "! protoc --version"
    ]
   },
   {
@@ -46,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,22 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[?1h\u001b=The template \"Console App\" was created successfully.\n",
-      "\n",
-      "Processing post-creation actions...\n",
-      "Restoring /opt/data/WebDev/gRPC/C#/Greeter/GreeterShared/GreeterShared.csproj:\n",
-      "  Determining projects to restore...\n",
-      "  Restored /opt/data/WebDev/gRPC/C#/Greeter/GreeterShared/GreeterShared.csproj (in 92 ms).\n",
-      "Restore succeeded.\n",
-      "\n",
-      "\n"
+      "zsh:1: command not found: dotnet\n"
      ]
     }
    ],
@@ -145,22 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[?1h\u001b=The template \"Console App\" was created successfully.\n",
-      "\n",
-      "Processing post-creation actions...\n",
-      "Restoring /opt/data/WebDev/gRPC/C#/Greeter/GreeterServer/GreeterServer.csproj:\n",
-      "  Determining projects to restore...\n",
-      "  Restored /opt/data/WebDev/gRPC/C#/Greeter/GreeterServer/GreeterServer.csproj (in 96 ms).\n",
-      "Restore succeeded.\n",
-      "\n",
-      "\n"
+      "zsh:1: command not found: dotnet\n"
      ]
     }
    ],
@@ -170,22 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[?1h\u001b=The template \"Console App\" was created successfully.\n",
-      "\n",
-      "Processing post-creation actions...\n",
-      "Restoring /opt/data/WebDev/gRPC/C#/Greeter/GreeterClient/GreeterClient.csproj:\n",
-      "  Determining projects to restore...\n",
-      "  Restored /opt/data/WebDev/gRPC/C#/Greeter/GreeterClient/GreeterClient.csproj (in 95 ms).\n",
-      "Restore succeeded.\n",
-      "\n",
-      "\n"
+      "zsh:1: command not found: dotnet\n"
      ]
     }
    ],
@@ -198,16 +192,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gen photo file"
+    "## Gen photo file\n",
+    "- https://protobuf.dev/reference/csharp/csharp-generated/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "! protoc --proto_path=Greeter/protos --csharp_out=Greeter/GreeterShared/ helloworld.proto"
+    "# ! protoc --proto_path=Greeter/protos --csharp_out=Greeter/GreeterShared/ helloworld.proto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[?1h\u001b=\u001b[?1h\u001b=http-cache: /Users/bablueza/.local/share/NuGet/http-cache\n",
+      "global-packages: /Users/bablueza/.nuget/packages/\n",
+      "temp: /var/folders/zm/l0c_qw_x7p1624vnzkv3kfp80000gp/T/NuGetScratch\n",
+      "plugins-cache: /Users/bablueza/.local/share/NuGet/plugin-cache\n",
+      "\u001b[?1h\u001b="
+     ]
+    }
+   ],
+   "source": [
+    "! dotnet nuget locals all --list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m1.12.0\u001b[m\u001b[m \u001b[34m2.66.0\u001b[m\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ! ls /root/.nuget/packages/grpc.tools/2.57.0/tools\n",
+    "! ls /Users/bablueza/.nuget/packages/grpc.tools/1.12.0/tools\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mgrpc_csharp_plugin\u001b[m\u001b[m \u001b[31mprotoc\u001b[m\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls /Users/bablueza/.nuget/packages/grpc.tools/1.12.0/tools/macosx_x64/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# ! protoc --proto_path=Greeter/protos --csharp_out=Greeter/GreeterShared/ --plugin=protoc-gen-grpc=/root/.nuget/packages/grpc.tools/2.57.0/tools/linux_x64/grpc_csharp_plugin --grpc_out=Greeter/GreeterShared/ helloworld.proto\n",
+    "\n",
+    "! protoc --proto_path=Greeter/protos --csharp_out=Greeter/GreeterShared/ --plugin=protoc-gen-grpc=/Users/bablueza/.nuget/packages/grpc.tools/1.12.0/tools/macosx_x64/grpc_csharp_plugin --grpc_out=Greeter/GreeterShared/ helloworld.proto"
    ]
   },
   {
@@ -226,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -238,84 +302,84 @@
     }
    ],
    "source": [
-    "%%writefile Greeter/GreeterShared/HelloworldGrpc.cs\n",
-    "#pragma warning disable 1591\n",
-    "#region Designer generated code\n",
+    "# %%writefile Greeter/GreeterShared/HelloworldGrpc.cs\n",
+    "# #pragma warning disable 1591\n",
+    "# #region Designer generated code\n",
     "\n",
-    "using grpc = global::Grpc.Core;\n",
+    "# using grpc = global::Grpc.Core;\n",
     "\n",
-    "namespace Helloworld {\n",
-    "  public static partial class Greeter\n",
-    "  {\n",
-    "    static readonly string __ServiceName = \"helloworld.Greeter\";\n",
+    "# namespace Helloworld {\n",
+    "#   public static partial class Greeter\n",
+    "#   {\n",
+    "#     static readonly string __ServiceName = \"helloworld.Greeter\";\n",
     "\n",
-    "    static readonly grpc::Marshaller<global::Helloworld.HelloRequest> __Marshaller_HelloRequest = grpc::Marshallers.Create((arg) => global::Google.Protobuf.MessageExtensions.ToByteArray(arg), global::Helloworld.HelloRequest.Parser.ParseFrom);\n",
-    "    static readonly grpc::Marshaller<global::Helloworld.HelloReply> __Marshaller_HelloReply = grpc::Marshallers.Create((arg) => global::Google.Protobuf.MessageExtensions.ToByteArray(arg), global::Helloworld.HelloReply.Parser.ParseFrom);\n",
+    "#     static readonly grpc::Marshaller<global::Helloworld.HelloRequest> __Marshaller_HelloRequest = grpc::Marshallers.Create((arg) => global::Google.Protobuf.MessageExtensions.ToByteArray(arg), global::Helloworld.HelloRequest.Parser.ParseFrom);\n",
+    "#     static readonly grpc::Marshaller<global::Helloworld.HelloReply> __Marshaller_HelloReply = grpc::Marshallers.Create((arg) => global::Google.Protobuf.MessageExtensions.ToByteArray(arg), global::Helloworld.HelloReply.Parser.ParseFrom);\n",
     "\n",
-    "    static readonly grpc::Method<global::Helloworld.HelloRequest, global::Helloworld.HelloReply> __Method_SayHello = new grpc::Method<global::Helloworld.HelloRequest, global::Helloworld.HelloReply>(\n",
-    "        grpc::MethodType.Unary,\n",
-    "        __ServiceName,\n",
-    "        \"SayHello\",\n",
-    "        __Marshaller_HelloRequest,\n",
-    "        __Marshaller_HelloReply);\n",
+    "#     static readonly grpc::Method<global::Helloworld.HelloRequest, global::Helloworld.HelloReply> __Method_SayHello = new grpc::Method<global::Helloworld.HelloRequest, global::Helloworld.HelloReply>(\n",
+    "#         grpc::MethodType.Unary,\n",
+    "#         __ServiceName,\n",
+    "#         \"SayHello\",\n",
+    "#         __Marshaller_HelloRequest,\n",
+    "#         __Marshaller_HelloReply);\n",
     "\n",
-    "    public static global::Google.Protobuf.Reflection.ServiceDescriptor Descriptor\n",
-    "    {\n",
-    "      get { return global::Helloworld.HelloworldReflection.Descriptor.Services[0]; }\n",
-    "    }\n",
-    "    public abstract partial class GreeterBase\n",
-    "    {\n",
-    "      public virtual global::System.Threading.Tasks.Task<global::Helloworld.HelloReply> SayHello(global::Helloworld.HelloRequest request, grpc::ServerCallContext context)\n",
-    "      {\n",
-    "        throw new grpc::RpcException(new grpc::Status(grpc::StatusCode.Unimplemented, \"\"));\n",
-    "      }\n",
+    "#     public static global::Google.Protobuf.Reflection.ServiceDescriptor Descriptor\n",
+    "#     {\n",
+    "#       get { return global::Helloworld.HelloworldReflection.Descriptor.Services[0]; }\n",
+    "#     }\n",
+    "#     public abstract partial class GreeterBase\n",
+    "#     {\n",
+    "#       public virtual global::System.Threading.Tasks.Task<global::Helloworld.HelloReply> SayHello(global::Helloworld.HelloRequest request, grpc::ServerCallContext context)\n",
+    "#       {\n",
+    "#         throw new grpc::RpcException(new grpc::Status(grpc::StatusCode.Unimplemented, \"\"));\n",
+    "#       }\n",
     "\n",
-    "    }\n",
+    "#     }\n",
     "\n",
-    "    public partial class GreeterClient : grpc::ClientBase<GreeterClient>\n",
-    "    {\n",
-    "      public GreeterClient(grpc::Channel channel) : base(channel)\n",
-    "      {\n",
-    "      }\n",
-    "      public GreeterClient(grpc::CallInvoker callInvoker) : base(callInvoker)\n",
-    "      {\n",
-    "      }\n",
-    "      protected GreeterClient() : base()\n",
-    "      {\n",
-    "      }\n",
-    "      protected GreeterClient(ClientBaseConfiguration configuration) : base(configuration)\n",
-    "      {\n",
-    "      }\n",
-    "      public virtual global::Helloworld.HelloReply SayHello(global::Helloworld.HelloRequest request, grpc::Metadata headers = null, global::System.DateTime? deadline = null, global::System.Threading.CancellationToken cancellationToken = default(global::System.Threading.CancellationToken))\n",
-    "      {\n",
-    "        return SayHello(request, new grpc::CallOptions(headers, deadline, cancellationToken));\n",
-    "      }\n",
-    "      public virtual global::Helloworld.HelloReply SayHello(global::Helloworld.HelloRequest request, grpc::CallOptions options)\n",
-    "      {\n",
-    "        return CallInvoker.BlockingUnaryCall(__Method_SayHello, null, options, request);\n",
-    "      }\n",
-    "      public virtual grpc::AsyncUnaryCall<global::Helloworld.HelloReply> SayHelloAsync(global::Helloworld.HelloRequest request, grpc::Metadata headers = null, global::System.DateTime? deadline = null, global::System.Threading.CancellationToken cancellationToken = default(global::System.Threading.CancellationToken))\n",
-    "      {\n",
-    "        return SayHelloAsync(request, new grpc::CallOptions(headers, deadline, cancellationToken));\n",
-    "      }\n",
-    "      public virtual grpc::AsyncUnaryCall<global::Helloworld.HelloReply> SayHelloAsync(global::Helloworld.HelloRequest request, grpc::CallOptions options)\n",
-    "      {\n",
-    "        return CallInvoker.AsyncUnaryCall(__Method_SayHello, null, options, request);\n",
-    "      }\n",
-    "      protected override GreeterClient NewInstance(ClientBaseConfiguration configuration)\n",
-    "      {\n",
-    "        return new GreeterClient(configuration);\n",
-    "      }\n",
-    "    }\n",
-    "    public static grpc::ServerServiceDefinition BindService(GreeterBase serviceImpl)\n",
-    "    {\n",
-    "      return grpc::ServerServiceDefinition.CreateBuilder()\n",
-    "          .AddMethod(__Method_SayHello, serviceImpl.SayHello).Build();\n",
-    "    }\n",
+    "#     public partial class GreeterClient : grpc::ClientBase<GreeterClient>\n",
+    "#     {\n",
+    "#       public GreeterClient(grpc::Channel channel) : base(channel)\n",
+    "#       {\n",
+    "#       }\n",
+    "#       public GreeterClient(grpc::CallInvoker callInvoker) : base(callInvoker)\n",
+    "#       {\n",
+    "#       }\n",
+    "#       protected GreeterClient() : base()\n",
+    "#       {\n",
+    "#       }\n",
+    "#       protected GreeterClient(ClientBaseConfiguration configuration) : base(configuration)\n",
+    "#       {\n",
+    "#       }\n",
+    "#       public virtual global::Helloworld.HelloReply SayHello(global::Helloworld.HelloRequest request, grpc::Metadata headers = null, global::System.DateTime? deadline = null, global::System.Threading.CancellationToken cancellationToken = default(global::System.Threading.CancellationToken))\n",
+    "#       {\n",
+    "#         return SayHello(request, new grpc::CallOptions(headers, deadline, cancellationToken));\n",
+    "#       }\n",
+    "#       public virtual global::Helloworld.HelloReply SayHello(global::Helloworld.HelloRequest request, grpc::CallOptions options)\n",
+    "#       {\n",
+    "#         return CallInvoker.BlockingUnaryCall(__Method_SayHello, null, options, request);\n",
+    "#       }\n",
+    "#       public virtual grpc::AsyncUnaryCall<global::Helloworld.HelloReply> SayHelloAsync(global::Helloworld.HelloRequest request, grpc::Metadata headers = null, global::System.DateTime? deadline = null, global::System.Threading.CancellationToken cancellationToken = default(global::System.Threading.CancellationToken))\n",
+    "#       {\n",
+    "#         return SayHelloAsync(request, new grpc::CallOptions(headers, deadline, cancellationToken));\n",
+    "#       }\n",
+    "#       public virtual grpc::AsyncUnaryCall<global::Helloworld.HelloReply> SayHelloAsync(global::Helloworld.HelloRequest request, grpc::CallOptions options)\n",
+    "#       {\n",
+    "#         return CallInvoker.AsyncUnaryCall(__Method_SayHello, null, options, request);\n",
+    "#       }\n",
+    "#       protected override GreeterClient NewInstance(ClientBaseConfiguration configuration)\n",
+    "#       {\n",
+    "#         return new GreeterClient(configuration);\n",
+    "#       }\n",
+    "#     }\n",
+    "#     public static grpc::ServerServiceDefinition BindService(GreeterBase serviceImpl)\n",
+    "#     {\n",
+    "#       return grpc::ServerServiceDefinition.CreateBuilder()\n",
+    "#           .AddMethod(__Method_SayHello, serviceImpl.SayHello).Build();\n",
+    "#     }\n",
     "\n",
-    "  }\n",
-    "}\n",
-    "#endregion"
+    "#   }\n",
+    "# }\n",
+    "# #endregion"
    ]
   },
   {
@@ -327,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
